crates/shipper-cli/tests/snapshots/e2e_expanded__inspect_events_empty.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
Event log: <STATE_DIR>/events.jsonl
