crates/shipper-cli/tests/snapshots/e2e_expanded__inspect_events_json_format.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
assertion_line: 2662
expression: normalize_output(&stdout)
---
{"timestamp":"2025-01-01T00:00:00Z","event_type":{"type":"plan_created","plan_id":"abc123","package_count":1},"package":"all"}
{"timestamp":"2025-01-01T00:00:01Z","event_type":{"type":"execution_started"},"package":"all"}
