crates/shipper-cli/tests/snapshots/e2e_expanded__inspect_receipt_missing_exit_code.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: output.status.code()
---
Some(
    1,
)
